--- a/css.css
+++ b/css.css
@@ -50,8 +50,9 @@
   z-index: 2;
 }
 .Three_login li a{
-  display: block;
-  text-align:center;
+  display: flex;
+  align-items: center;  /* 수직 가운데 정렬 */
+  justify-content: center;
   border-top-right-radius:10px;
   border-top-left-radius:10px;
   border-bottom-right-radius: 0px;
@@ -63,6 +64,12 @@
   border-bottom: none;
   text-decoration: none;
   color:black;
+}
+.Three_login li:nth-child(2) a,
+.Three_login li:nth-child(3) a{
+  background: none;
+  border-top: none;
+  border-bottom: 1px solid #e2e3e5;
 }
 .INPUT{
   position:absolute;
